--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.2",
+    "react-number-format": "^4.7.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-to-pdf": "0.0.14",
