--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.1",
+    "debounce": "^1.2.1",
     "html2canvas": "^1.3.2",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.20",
