--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.20",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.2",
     "react-number-format": "^4.7.3",
