--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "@react-pdf/renderer": "^2.0.19",
+    "@react-pdf/renderer": "^2.0.20",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.1",
     "debounce": "^1.2.1",
+    "html-to-image": "^1.8.5",
     "html2canvas": "^1.3.2",
+    "html2pdf": "0.0.11",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.20",
     "react": "^17.0.2",
