--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "html-to-image": "^1.8.5",
     "html2canvas": "^1.3.2",
     "html2pdf": "0.0.11",
-    "jspdf": "^2.3.1",
-    "jspdf-autotable": "^3.5.20",
+    "json-server": "^0.16.3",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
@@ -32,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev-server": "json-server -p 8080 userData.json"
   },
   "eslintConfig": {
     "extends": [
